--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
+    "react-scripts": "2.1.3",
     "redux": "4.0.0",
     "redux-promise": "^0.6.0",
-    "react-scripts": "2.1.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
